Bug 253619 - akonadi_imap_resource crashes while syncing
Summary: akonadi_imap_resource crashes while syncing
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: IMAP resource (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Kevin Ottens
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-08 20:33 UTC by Anssi Hannula
Modified: 2010-10-29 15:13 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anssi Hannula 2010-10-08 20:33:45 UTC
Application: akonadi_imap_resource (0.1)
KDE Platform Version: 4.5.71 (4.6 >= 20101005)
Qt Version: 4.7.0
Operating System: Linux 2.6.36-tmb-desktop-0.rc6.1mdv x86_64
Distribution: "Mandriva Linux 2011.0"

-- Information about the crash:
- What I was doing when the application crashed:

I had selected an IMAP folder and akonadi_imap_resource crashed while it was starting to load the folder.

-- Backtrace:
Application: Akonadi Resource (akonadi_imap_resource), signal: Aborted
[Current thread is 1 (Thread 0x7f3886a1d720 (LWP 7472))]

Thread 3 (Thread 0x7f38746c4710 (LWP 7483)):
#0  0x00007f38826dc663 in poll () from /lib64/libc.so.6
#1  0x00007f38810454c4 in g_main_context_poll (context=0x7f386c0009b0, block=1, dispatch=1, self=<value optimized out>) at gmain.c:3093
#2  g_main_context_iterate (context=0x7f386c0009b0, block=1, dispatch=1, self=<value optimized out>) at gmain.c:2775
#3  0x00007f38810459fd in g_main_context_iteration (context=0x7f386c0009b0, may_block=1) at gmain.c:2843
#4  0x00007f3885e898b6 in QEventDispatcherGlib::processEvents (this=0x7f386c0008c0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:417
#5  0x00007f3885e5dad2 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f3885e5dd1c in QEventLoop::exec (this=0x7f38746c3e40, flags=...) at kernel/qeventloop.cpp:201
#7  0x00007f3885d72e74 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#8  0x00007f3884b25ed4 in KIMAP::SessionThread::run (this=0x276e050) at /usr/src/debug/kdepimlibs-4.5.71svn1183358/kimap/sessionthread.cpp:166
#9  0x00007f3885d7568e in QThreadPrivate::start (arg=0x276e050) at thread/qthread_unix.cpp:266
#10 0x00007f3881b19d25 in start_thread () from /lib64/libpthread.so.0
#11 0x00007f38826e6efd in clone () from /lib64/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f38712d8710 (LWP 7820)):
[KCrash Handler]
#6  0x00007f3882641075 in raise () from /lib64/libc.so.6
#7  0x00007f3882642806 in abort () from /lib64/libc.so.6
#8  0x00007f3885d6d5d4 in qt_message_output (msgType=<value optimized out>, buf=<value optimized out>) at global/qglobal.cpp:2259
#9  0x00007f3885d6d79d in qt_message(QtMsgType, const char *, typedef __va_list_tag __va_list_tag *) (msgType=QtFatalMsg, msg=0x7f3885ebdd88 "ASSERT: \"%s\" in file %s, line %d", ap=0x7f38712d7190)
    at global/qglobal.cpp:2305
#10 0x00007f3885d6d935 in qFatal (msg=<value optimized out>) at global/qglobal.cpp:2488
#11 0x00007f3884b10f58 in QByteArray::at (this=0x7f3868003da0, i=1873) at /usr/lib/qt4/include/QtCore/qbytearray.h:396
#12 0x00007f3884b10d58 in KIMAP::ImapStreamParser::readParenthesizedList (this=0x7f3868003d90) at /usr/src/debug/kdepimlibs-4.5.71svn1183358/kimap/imapstreamparser.cpp:260
#13 0x00007f3884b26f32 in KIMAP::SessionThread::readMessage (this=0xe155e70) at /usr/src/debug/kdepimlibs-4.5.71svn1183358/kimap/sessionthread.cpp:96
#14 0x00007f3884b27394 in KIMAP::SessionThread::qt_metacall (this=0xe155e70, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7f38681ff720)
    at /usr/src/debug/kdepimlibs-4.5.71svn1183358/build/kimap/sessionthread_p.moc:99
#15 0x00007f3885e72aba in QObject::event (this=0xe155e70, e=<value optimized out>) at kernel/qobject.cpp:1211
#16 0x00007f388522d664 in QApplicationPrivate::notify_helper (this=0x2619210, receiver=0xe155e70, e=0x7f38681ff760) at kernel/qapplication.cpp:4396
#17 0x00007f38852320da in QApplication::notify (this=<value optimized out>, receiver=0xe155e70, e=0x7f38681ff760) at kernel/qapplication.cpp:4277
#18 0x00007f3883584c36 in KApplication::notify (this=0x7fffef796b00, receiver=0xe155e70, event=0x7f38681ff760) at /usr/src/debug/kdelibs-4.5.71svn1183355/kdeui/kernel/kapplication.cpp:311
#19 0x00007f3885e5e73c in QCoreApplication::notifyInternal (this=0x7fffef796b00, receiver=0xe155e70, event=0x7f38681ff760) at kernel/qcoreapplication.cpp:732
#20 0x00007f3885e61ee5 in sendEvent (receiver=0x0, event_type=0, data=0x26c3760) at kernel/qcoreapplication.h:215
#21 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x26c3760) at kernel/qcoreapplication.cpp:1373
#22 0x00007f3885e896c3 in sendPostedEvents (s=<value optimized out>) at kernel/qcoreapplication.h:220
#23 postEventSourceDispatch (s=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:277
#24 0x00007f3881044f83 in g_main_dispatch (context=0x7f38680016d0) at gmain.c:2149
#25 g_main_context_dispatch (context=0x7f38680016d0) at gmain.c:2702
#26 0x00007f3881045760 in g_main_context_iterate (context=0x7f38680016d0, block=1, dispatch=1, self=<value optimized out>) at gmain.c:2780
#27 0x00007f38810459fd in g_main_context_iteration (context=0x7f38680016d0, may_block=1) at gmain.c:2843
#28 0x00007f3885e8985f in QEventDispatcherGlib::processEvents (this=0x7f3868002640, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#29 0x00007f3885e5dad2 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#30 0x00007f3885e5dd1c in QEventLoop::exec (this=0x7f38712d7e40, flags=...) at kernel/qeventloop.cpp:201
#31 0x00007f3885d72e74 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#32 0x00007f3884b25ed4 in KIMAP::SessionThread::run (this=0xe155e70) at /usr/src/debug/kdepimlibs-4.5.71svn1183358/kimap/sessionthread.cpp:166
#33 0x00007f3885d7568e in QThreadPrivate::start (arg=0xe155e70) at thread/qthread_unix.cpp:266
#34 0x00007f3881b19d25 in start_thread () from /lib64/libpthread.so.0
#35 0x00007f38826e6efd in clone () from /lib64/libc.so.6
#36 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f3886a1d720 (LWP 7472)):
#0  0x00007f38826d7e8d in read () from /lib64/libc.so.6
#1  0x00007f3881044b95 in read (context=0x261bd20, max_priority=2147483647, fds=0x26cbed0, n_fds=5) at /usr/include/bits/unistd.h:45
#2  g_main_context_check (context=0x261bd20, max_priority=2147483647, fds=0x26cbed0, n_fds=5) at gmain.c:2610
#3  0x00007f38810454e2 in g_main_context_iterate (context=0x261bd20, block=1, dispatch=1, self=<value optimized out>) at gmain.c:2777
#4  0x00007f38810459fd in g_main_context_iteration (context=0x261bd20, may_block=1) at gmain.c:2843
#5  0x00007f3885e8985f in QEventDispatcherGlib::processEvents (this=0x25fec00, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#6  0x00007f38852d18be in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#7  0x00007f3885e5dad2 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#8  0x00007f3885e5dd1c in QEventLoop::exec (this=0x7fffef796a80, flags=...) at kernel/qeventloop.cpp:201
#9  0x00007f3885e6219b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#10 0x00007f3886537152 in Akonadi::ResourceBase::init (r=0x2745f80) at /usr/src/debug/kdepimlibs-4.5.71svn1183358/akonadi/resourcebase.cpp:282
#11 0x0000000000422de8 in int Akonadi::ResourceBase::init<ImapResource>(int, char**) ()
#12 0x00007f388262dc3d in __libc_start_main () from /lib64/libc.so.6
#13 0x00000000004171a9 in _start ()

Reported using DrKonqi
Comment 1 Alex Merry 2010-10-28 17:23:54 UTC
Yep, I get this with latest trunk as well.
Comment 2 Alex Merry 2010-10-29 15:08:07 UTC
SVN commit 1191030 by alexmerry:

Don't crash if we receive part of a list, and that part ends in carriage returns.

BUG: 253619



 M  +1 -1      imapstreamparser.cpp  
 M  +25 -3     tests/fetchjobtest.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1191030
Comment 3 Alex Merry 2010-10-29 15:13:54 UTC
SVN commit 1191034 by alexmerry:

Backport r1191030: Don't crash if we receive part of a list, and that part ends in carriage
returns.

CCBUG: 253619



 M  +1 -1      imapstreamparser.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1191034