Don't crash if we receive part of a list, and that part ends in carriage returns.

BUG: 253619

svn path=/trunk/KDE/kdepimlibs/; revision=1191030